<resources>
    <string name="app_name">NightLifeKosovo</string>


    <string name="text_input_username">Username</string>
    <string name="text_input_email">Email</string>
    <string name="text_input_password">Password</string>
    <string name="text_input_confirm_password">Confirm Password</string>
    <string name="text_input_phone">Phone</string>
    <string name="text_input_birthday">Date of Birth (dd/mm/yyyy)*</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_registration_success">Registration success!</string>
    <string name="input_error">Wrong format!</string>
    <string name="input_password_error">The password do not match!</string>

    <string-array name="reasons">
        <item color="#FFFFFFFF">Select the type of account</item>
        <item>User</item>
        <item>Company</item>
    </string-array>
    <string name="title_activity_register_acitivity">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="text_input_name">Name</string>
    <string name="text_input_surname">Surname</string>
    <string name="text_register">Register</string>
    <string name="text_edit_profile_picture">Edit Profile Picture</string>

    <!--    Errors-->
    <string name="input_error_email">Email is required!</string>
    <string name="input_error_email_invalid">This is not a valid email format!</string>
    <string name="input_error_password">Password is required!</string>
    <string name="input_error_password_length">Make sure your password has at least more than 8 characters!</string>
    <string name="preference_file_key">preference_nightlife_kosovo</string>
    <string name="menu_item_events">Events</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_add_post">Add Post</string>
    <string name="menu_item_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search_bar">Search...</string>
    <string name="text_seek">Seek</string>
    <string name="text_seeking">Seeking</string>
    <string name="location">Location</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>

</resources>
