<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph.xml"
    app:startDestination="@+id/fragment_profile">


        <fragment
            android:id="@+id/fragment_events"
            android:name="com.example.nightlifekosovo.Fragments.EventsFragment"
            android:label="@string/menu_item_events"
            tools:layout="@layout/fragment_events" />

        <fragment
            android:id="@+id/fragment_search"
            android:name="com.example.nightlifekosovo.Fragments.SearchFragment"
            android:label="@string/menu_item_search"
            tools:layout="@layout/fragment_search" />

        <fragment
            android:id="@+id/fragment_add_post"
            android:name="com.example.nightlifekosovo.Fragments.AddPostFragment"
            android:label="@string/menu_item_add_post"
            tools:layout="@layout/fragment_add_post" />

        <fragment
            android:id="@+id/fragment_profile"
            android:name="com.example.nightlifekosovo.Fragments.ProfileFragment"
            android:label="@string/menu_item_profile"
            tools:layout="@layout/fragment_profile" />


</navigation>