<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".Activities.LoginActivity">
    <ScrollView
        android:id="@+id/scrollViewLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Top Container-->
            <LinearLayout
                android:id="@+id/activity_login_top_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/nightlife_logo_white" />

<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="3dp"-->
<!--                    android:text="@string/app_name"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textAllCaps="true"-->
<!--                    android:textColor="@color/white" />-->

            </LinearLayout>

            <!--Center Container-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/activity_login_top_container">



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_input_email"
                    android:textColorHint="@color/light_gray"
                    app:boxStrokeColor="@color/light_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_login_email_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:hint="@string/text_input_password"
                    android:textColorHint="@color/light_gray"
                    app:boxStrokeColor="@color/light_gray"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/light_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_login_password_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_login_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/purple_500"
                    android:fontFamily="@font/casper_bold"
                    android:text="@string/text_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/text_forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/light_gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_login_sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/light_purple"
                    android:fontFamily="@font/casper_regular"
                    android:text="@string/text_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp" />




            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/activity_login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_anchor="@+id/scrollViewLogIn"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>