<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_profile_top_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTintMode="src_atop"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


<!--                <androidx.cardview.widget.CardView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@color/light_blue"-->
<!--                    app:cardCornerRadius="30dp"-->
<!--                    app:cardElevation="10dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent">-->
                    <!--                    Inside the green shape-->


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/layoutTop"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@color/white"></RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/layoutBottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/layoutTop"
                           >


                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/dark_blue"
                                app:cardCornerRadius="30dp"
                                app:cardElevation="10dp">

                                <androidx.cardview.widget.CardView

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="30dp"
                                    android:layout_marginTop="60dp"
                                    android:layout_marginEnd="30dp"
                                    android:layout_marginBottom="10dp"
                                    app:cardCornerRadius="30dp"
                                    app:cardElevation="20dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/fragment_profile_username"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="5dp"
                                            android:text="@string/app_name"
                                            android:textAlignment="center"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/fragment_profile_location"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="2dp"
                                            android:text="@string/location"
                                            android:textAlignment="center" />

                                        <TextView
                                            android:id="@+id/fragment_profile_opening_hours"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="2dp"
                                            android:text="@string/opening_hours"
                                            android:textAlignment="center" />

                                        <TextView
                                            android:id="@+id/fragment_profile_phone"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="2dp"
                                            android:layout_marginBottom="10dp"
                                            android:text="@string/text_input_phone"
                                            android:textAlignment="center" />

                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>
                            </androidx.cardview.widget.CardView>

                        </RelativeLayout>

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/fragment_profile_image"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_above="@id/layoutBottom"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="-60dp"
                            android:adjustViewBounds="true"
                            android:background="@color/white"
                            android:padding="6dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_user_icon"
                            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularImage"
                            app:strokeColor="@color/dark_blue"
                            app:strokeWidth="3dp" />


                    </RelativeLayout>
<!--                </androidx.cardview.widget.CardView>-->


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_profile_bottom_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/lightest_blue"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/fragment_profile_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </androidx.recyclerview.widget.RecyclerView>


            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>